Address Test Port final TMS fixes for rhel7 to master branch, phase 2, RHCS-5403
This checkin coincides with the final sub task of porting the rhel7 tms to the master branch.

Once this code makes it to the testing phase, every feature present in the lastest version of the rhel7 tms
system should be present in any releases taken from the master branch.

Add some more TPS CS.cfg comments for newer features.
Fix tps docker test to include the cfg variable needed to allow tpsclient enrollments to complete.
Update call to CryptoUtil.exportSharedSecretWithAES in TPSConnectorProcessor.java to reflect change to
TPSConnectorService.java.

Addresss github code security concerns.
Change-Id: I7c98ddeffafd912debb908c9efc7a6bb591807ee